--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,9 @@
 {
     "name": "nikhil-pandey/tp-link",
-    "description": "A Package for controlling TP-Link 941ND router.",
+    "description": "Controlling TP-Link 941ND router.",
     "license": "MIT",
     "require": {
-        "php": ">=5.5",
-        "laravel/framework": "^5.1"
+        "php": ">=5.5"
     },
     "authors": [
         {
